/*
 * Dark Souls 3 - Open Server
 * Copyright (C) 2021 Tim Leonard
 *
 * This program is free software; licensed under the MIT license. 
 * You should have received a copy of the license along with this program. 
 * If not, see <https://opensource.org/licenses/MIT>.
 */

// Credit: Parts of this are based on research by: AmirBohd, Radai

syntax = "proto2";
option optimize_for = LITE_RUNTIME;
package DS3_FpdLogMessage;

message Vector {
    required float x = 1;
    required float y = 2;
    required float z = 3;
}

// ID: 5001
message GlobalEventLog {
    repeated uint32 values = 1;
}

// ID: 8001
message SystemOptionLog {
    message Game_option_setting {
        required uint32 toggle_auto_lock_on = 2;
        required uint32 auto_target = 3;
        required uint32 manual_attack_aiming = 4;
        required uint32 unknown_5 = 5;
        required uint32 vibration_level = 6;
    }
    message Network_setting {
        required uint32 allow_cross_region_play = 8;
        required uint32 has_password = 9;
        required uint32 restrict_summon_sign_visibility = 10;
        required uint32 allow_voice_chat = 11;
        required uint32 unknown_12 = 12;
        required uint32 start_offline = 13;
    }
    required Game_option_setting game_settings = 1;
    required Network_setting network_settings = 7;
}

// ID: 3000
message UseItemLog {
    repeated group Use_item_info_list =1 {
        required uint32 item_id = 2;                 
        required uint32 count = 3;                 
        required uint32 unknown_4 = 4;                 // 9
    }

    required uint32 unknown_5 = 5;                     // 51
    required Vector location = 6;
}

// ID: 3002
message GetItemLog {
    repeated group Get_item_info_list = 1 {
        required uint32 unknown_2 = 2;                 // 51
        required Vector location = 3;
        required uint32 unknown_4 = 4;                 // 4
        required uint32 item_id = 5;                 
        required uint32 count = 6;                 
        required uint32 unknown_7 = 7;                 // 2
        required uint32 unknown_8 = 8;                 // 0
        required uint32 unknown_9 = 9;                 // 0
    }
}

// ID: 2021
message ActGestureLog {
    repeated group Use_gesture_info_list = 1 {
        required uint32 guesture_id = 2;            
        required uint32 count = 3;
    }
    
    required uint32 unknown_4 = 4;                          // Always seems to be 37
    required Vector unknown_5 = 5;
}

// ID: 2020
message UseMagicLog {
    repeated group Use_magic_info_list = 1 {
        required uint32 spell_id = 2;
        required uint32 count = 3;
    }

    required uint32 unknown_4 = 4;                     // 40
    required Vector location = 5;
}

// ID: 3001
message PurchaseItemLog {
    repeated group Purchase_item_info_list = 1 {
        required uint32 unknown_2 = 2;                 // 40
        required Vector location = 3;
        required uint32 item_id = 5;            
        required uint32 unknown_6 = 6;                 // 110107, 110251 - Not sure I thought total cost or sounds remaining but neither adds up to that.
        required uint32 count = 7;                  
    }
}

// ID: 3003
message DropItemLog {
    repeated group Throw_away_item_list = 1 {
        required uint32 unknown_2 = 2;                 // 37
        required Vector location = 3;
        required uint32 unknown_4 = 4;                 // 4
        required uint32 item_id = 5;                 
        required uint32 count = 6;                 
    }
}

// ID: 3004
message LeaveItemLog {
    repeated group Set_item_info_list = 1 {
        required uint32 unknown_2 = 2;                 // 37
        required Vector location = 3;
        required uint32 unknown_4 = 4;                 // 4
        required uint32 item_id = 5;                 
        required uint32 count = 6;                 
    }
}

// ID: 3005
message SaleItemLog {
    repeated group Sale_item_info_list = 1 {
        required uint32 unknown_2 = 2;                 // 407
        required Vector location = 3;
        required uint32 unknown_4 = 4;                 // 4
        required uint32 item_id = 5;                 
        required uint32 count = 6;                 
    }
}

// ID: 3010
message StrengthenWeaponLog {
    repeated group Strengthen_weapon_info_list = 1 {
        required uint32 from_item_id = 2;                 
        required uint32 to_item_id = 3;                 
    }
}

// ID: 7040
message VisitResultLog {
    required uint32 map_id = 1;                         // 510000
    required Vector location = 2;
    required uint32 online_area_id_source = 3;          // Where player was before visit occured.
    required uint32 online_area_id_destination = 4;     // Where player goes to for visit.
    required uint32 unknown_2 = 5;                      // 1 - I'm guessing success?
}

// ID: 7050
message QuickMatchResultLog {
    required uint32 unknown_1 = 1;                      // 4
    required uint32 unknown_2 = 2;                      // 460000
    required uint32 unknown_3 = 3;                      // 0
    required uint32 unknown_4 = 4;                      // 0
    required uint32 unknown_5 = 5;                      // 2
    required uint32 unknown_6 = 6;                      // 3
    required uint32 unknown_7 = 7;                      // 1
    required uint32 unknown_8 = 8;                      // 76
    required uint32 unknown_9 = 9;                      // 3
}

// ID: 7060
message QuickMatchEndLog {
    required uint32 unknown_1 = 1;                      // 0
    required uint32 unknown_2 = 2;                      // 540000, 470000
    required uint32 unknown_3 = 3;                      // 0
    required uint32 unknown_4 = 4;                      // 1
    required uint32 unknown_5 = 5;                      // 2
    required uint32 unknown_6 = 6;                      // 0
}

// ID: ???
message ConvertSaveDataLog {
}

// ID: ??? - Seemingly never sent.
message AccessWarehouseLog {
    message Access_warehouse_info_list {
    }
}

// ID: ??? - Seemingly never sent.
message RepairEquipmentLog {
    message Repair_equipment_info_list {
    }
}

// ID: ??? - Seemingly never sent.
message LevelUpLog {
}

// ID: ??? - Seemingly never sent.
message BrokenEquipmentLog {
}

// ID: ??? - Seemingly never sent.
message EquipMagicLog {
}

// ID: ??? - Seemingly never sent.
message ChaneEstusFlaskNumLog {
}

// ID: ??? - Seemingly never sent.
message CreateBloodMessageLog {
}

// ID: ??? - Seemingly never sent.
message EvaluateBloodMessageLog {
}
